# POC

./: .gitignore
c_exp/hello_world/: client  client.c  server  server.c
computer_vision/simple_opencv_pixel_walk/: CMakeLists.txt  main.cpp
esp32/FreeRTOS/: README.md
esp32/FreeRTOS/include/: priority.c  sensor.c
esp32/FreeRTOS/src/: main.c
esp32/Hello_world/src/: main.cpp
esp32/tcp_client/include/: setup_sta.c
esp32/tcp_client/src/: main.c
esp32/test_espidf/: platformio.ini  sdkconfig.esp32doit-devkit-v1
esp32/test_espidf/src/: main.c
esp32/wifi/: CMakeLists.txt  platformio.ini  sdkconfig.esp32doit-devkit-v1
esp32/wifi/include/: my_net_tools.c
esp32/wifi/src/: main.c
esp32/wifi6/: CMakeLists.txt  platformio.ini  sdkconfig.esp32-c6-devkitm-1
esp32/wifi6/include/: my_net_tools.c  nat.c  setup_ap.c  setup_station.c
esp32/wifi6/src/: main.c
